client/src/assets/styles/components/global.pcss
html,
body {
  height: 100%;
}

div.inactive {
  @apply hidden;
}

#app {
  overflow: auto;
  height: 100%;
}

#app > main {
  min-height: 95vh;
  z-index: 0;
  max-width: 100%;
}

main.wrapper {
  width: calc(100% - 2vw);
  margin-top: 1em;
  display: flex;
  justify-content: center;
}

/*  Nav Layout  */

#hamburger-wrapper,
.logo {
  @apply flex-none px-2 my-1;
}

#hamburger-wrapper input:checked ~ nav {
  display: flex;
}

div.sm-selector-container .domain-selector {
  @apply sm:w-1/2 text-xs;
  max-width: 85%;
}

.main-logo::before {
  position: absolute;
  right: -22px;
  top: -13px;
  font-weight: 900;
  font-family: "Font Awesome 5 Free";
  content: "\f005";
  width: 1.5rem;
  height: 1.5rem;
  font-size: 2.5rem;
  transform: rotate(9deg);
  @apply text-balance-basic-digblue;
}

.main-logo::after {
  @apply font-std;
  position: absolute;
  content: "DEMO";
  font-size: 0.4rem;
  color: #0a0a0a;
  transform: rotate(7deg);
  top: -10px;
  right: -35px;
  z-index: 50;
}

.cta-pills,
.cta-header {
  @apply col-span-5 pr-16 -mt-4 md:mt-2 md:pr-0;
}
.cta-header {
  @apply uppercase;
}

@media only screen and (min-width: 768px) {
  main.wrapper > .cloud-man-vector {
    grid-column: 2 / span 3;
  }
}

@media (min-width: 1024px) {
  div.sm-selector-container {
    @apply hidden h-8;
  }

  nav > ul > li:first-of-type {
    border: 0;
  }
}

@media only screen and (min-width: 1920px) {
  #app > main.wrapper {
    width: calc(100% - 2em);
    grid-template-columns: repeat(15, 1fr);
    grid-template-rows: repeat(6, 15vh);
  }

  #app .feature-card:first-child,
  #app .feature-card:last-child {
    margin-bottom: 8rem;
  }

  #app .watermark::after {
    background: no-repeat 90px 0 url("../images/big-pyramid.png");
    background-size: cover;
    content: "";
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    position: fixed;
    opacity: 0.4;
  }

  #app > main.wrapper > .logo,
  #app > main.wrapper > .slogan {
    grid-column: 6 / span 5;
  }

  #app > main.wrapper > .logo {
    grid-row: 1;
  }

  #app > main.wrapper > .slogan {
    grid-row: 2;
  }

  #app > main.wrapper > .cta-header {
    grid-row: 5;
    font-size: 1.25rem;
    grid-column: 7 / span 3;
  }

  #app > main.wrapper > .cloud-man-vector {
    grid-column: 1 / span 6;
    grid-row: 4 / span 3;
  }

  #app > main.wrapper > .cta-pills {
    grid-row: 4;
    grid-column: 10 / span 5;
  }
}

